@@ -179,6 +179,15 @@ SUBM_VERIFY=1
 # 2 = Always
 SHOW_COMPILE=1
 
+# Balloons notification.
+# Here you can configure different ways of notifying the contest crew,
+# that a team has correctly solved a problem and should receive a
+# balloon. Leave a field empty to not use that method.
+# Notification by e-mail (give address):
+#BALLOON_EMAIL[string]=domjudge@localhost
+# Notification by printouts (give printer command to pipe message to):
+#BALLOON_PRINT[string]=lpr
+
 
 #############
 # Debugging #
