@@ -121,6 +121,7 @@ CREATE TABLE `scoreboard_jury` (
   `totaltime` int(4) unsigned NOT NULL default '0',
   `penalty` int(4) unsigned NOT NULL default '0',
   `is_correct` tinyint(1) unsigned NOT NULL default '0',
+  `balloon` tinyint(1) unsigned NOT NULL default '0',
   PRIMARY KEY  (`cid`,`team`,`problem`)
 ) TYPE=MyISAM COMMENT='Scoreboard cache (jury version)';
 
@@ -136,6 +137,7 @@ CREATE TABLE `scoreboard_public` (
   `totaltime` int(4) unsigned NOT NULL default '0',
   `penalty` int(4) unsigned NOT NULL default '0',
   `is_correct` tinyint(1) unsigned NOT NULL default '0',
+  `balloon` tinyint(1) unsigned NOT NULL default '0',
   PRIMARY KEY  (`cid`,`team`,`problem`)
 ) TYPE=MyISAM COMMENT='Scoreboard cache (public/team version)';
 
